WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278334
WorkerSWClientConnection should not invoke callback when it does not exist
https://bugs.webkit.org/show_bug.cgi?id=278334
Summary
WorkerSWClientConnection should not invoke callback when it does not exist
Sihui Liu
Reported
2024-08-19 12:04:47 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-19 12:05:58 PDT
<
rdar://problem/134278561
>
Sihui Liu
Comment 2
2024-08-19 12:07:55 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32402
EWS
Comment 3
2024-08-19 13:26:10 PDT
Committed
282456@main
(655f127964b6): <
https://commits.webkit.org/282456@main
> Reviewed commits have been landed. Closing PR #32402 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug