WorkerSWClientConnection should not invoke callback when it does not exist https://bugs.webkit.org/show_bug.cgi?id=278334 rdar://134278561

Reviewed by Chris Dumez.

This patch also contains a drive-by fix for ServiceWorkerRegistration to reject Promise early when script execution
context has stopped.

* Source/WebCore/workers/service/ServiceWorkerRegistration.cpp:
(WebCore::ServiceWorkerRegistration::addCookieChangeSubscriptions):
(WebCore::ServiceWorkerRegistration::removeCookieChangeSubscriptions):
(WebCore::ServiceWorkerRegistration::cookieChangeSubscriptions):
* Source/WebCore/workers/service/WorkerSWClientConnection.cpp:
(WebCore::WorkerSWClientConnection::addCookieChangeSubscriptions):
(WebCore::WorkerSWClientConnection::removeCookieChangeSubscriptions):
(WebCore::WorkerSWClientConnection::cookieChangeSubscriptions):

Canonical link: https://commits.webkit.org/282456@main